deploy-mongodb.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 27017
      name: mongo
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - mountPath: /data
              name: data-vol
              readOnly: false
      volumes:
        - name: data-vol
          emptyDir: {}
