deploy-mongodb_ss.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo-statefulset
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 27017
      name: mongo
  selector:
    app: mongo-statefulset
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: mongo
  replicas: 1
  selector:
    matchLabels:
      app: mongo-statefulset
  template:
    metadata:
      labels:
        app: mongo-statefulset
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            - name: pvc-data
              mountPath: /data/db
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - mongo --port 27017 --eval "rs.status()" | grep -vq "REMOVED"
            initialDelaySeconds: 45
            timeoutSeconds: 5
      volumes:
        - name: pvc-data
          persistentVolumeClaim:
            claimName: pvc
