ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.bluemix.net/redirect-to-https: "True"
  name: worklog-ingress
spec:
  rules:
    - host: <ingress subdomain here>
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: worklog-ui
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: worklog-api
                port:
                  number: 5000
          - path: /flasgger_static
            pathType: Prefix
            backend:
              service:
                name: worklog-api
                port:
                  number: 5000
